clusters/default/vscode/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: vscode
  labels:
    app: code-server
spec:
  type: ClusterIP
  selector:
    app: code-server
  ports:
    - port: 80
      targetPort: 8443
      protocol: TCP
