clusters/default/vscode/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vs
  namespace: vscode
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vs.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: kube-system
      services:
        - name: code-server
          port: 80
